--- a/src/App.sass
+++ b/src/App.sass
@@ -1,6 +1,8 @@
+import 'fonts'
+
 $heading-color: #f30
 $system-font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
 
 h1
-    font-family: $system-font-stack
+    font-family: Inconsolata
     color: $heading-color
