Revert to Webpack 3 🙄
Revert to earlier release of webpack-dev-server as well
Unbelievable
Things work as expected tho

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,8 +1,7 @@
-import 'fonts'
+@import 'fonts'
 
 $heading-color: #f30
-$system-font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
 
 h1
-    font-family: Inconsolata
+    font-family: Inconsolata, monospace
     color: $heading-color
